--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -12,15 +12,15 @@ html(lang="en")
 
         main
             div#welcome
-                form
+                form#name
+                    input(placeholder="nickname", required, type="text")
+                    button Save
+                form#entrance
                     input(placeholder="room name", required, type="text")
                     button Enter Room
             div#room
                 h3
                 ul
-                form#name
-                    input(placeholder="nickname", required, type="text")
-                    button Save
                 form#msg
                     input(placeholder="message", required, type="text")
                     button Send
